work in progress

--- a/data_preparation/data_preparation.ipynb
+++ b/data_preparation/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 143,
    "id": "8551b295",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 144,
    "id": "07d471fa",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 145,
    "id": "c540d52e",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 146,
    "id": "bfd53fcb",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 147,
    "id": "807b56cc",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 148,
    "id": "4cda9067",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 149,
    "id": "f6e01063",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 150,
    "id": "97d3bed7",
    "metadata": {},
    "outputs": [],
@@ -202,6 +202,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "c9d04459",
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Calculate average attendance for each team and season\n",
+    "average_attendance_per_season = attendance_df.groupby(['year', 'team_full_name'])['weekly_attendance'].mean().reset_index()\n",
+    "\n",
+    "# Rename and show average attendance per season\n",
+    "average_attendance_per_season.rename(columns={'weekly_attendance': 'avg_season_attendance'}, inplace=True)\n",
+    "\n",
+    "# Lag avg_season_attendance by one year for each team\n",
+    "average_attendance_per_season['avg_season_attendance_prev'] = (\n",
+    "    average_attendance_per_season.groupby('team_full_name')['avg_season_attendance'].shift(1)\n",
+    ")\n",
+    "\n",
+    "# Merge lagged average attendance into games_df using home_team and year\n",
+    "games_df = games_df.merge(\n",
+    "    average_attendance_per_season[['year', 'team_full_name', 'avg_season_attendance_prev']],\n",
+    "    left_on=['year', 'home_team'],\n",
+    "    right_on=['year', 'team_full_name'],\n",
+    "    how='left'\n",
+    ").drop(columns=['team_full_name'])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "df1a3c97",
    "metadata": {},
@@ -211,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 152,
    "id": "7e7160d1",
    "metadata": {},
    "outputs": [],
@@ -249,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 153,
    "id": "e1ee6761",
    "metadata": {},
    "outputs": [],
@@ -305,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 154,
    "id": "9a40994b",
    "metadata": {},
    "outputs": [
@@ -341,8 +372,8 @@
        "      <th>time</th>\n",
        "      <th>pts_win</th>\n",
        "      <th>...</th>\n",
-       "      <th>weekly_attendance</th>\n",
        "      <th>weekly_attendance_ratio</th>\n",
+       "      <th>avg_season_attendance_prev</th>\n",
        "      <th>home_team_superbowl_winner_last_season</th>\n",
        "      <th>away_team_superbowl_winner_last_season</th>\n",
        "      <th>home_team_playoffs_last_season</th>\n",
@@ -367,8 +398,8 @@
        "      <td>10:16PM</td>\n",
        "      <td>24</td>\n",
        "      <td>...</td>\n",
-       "      <td>61940.0</td>\n",
        "      <td>0.707304</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -391,8 +422,8 @@
        "      <td>1:02PM</td>\n",
        "      <td>14</td>\n",
        "      <td>...</td>\n",
-       "      <td>65757.0</td>\n",
        "      <td>0.715536</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -415,8 +446,8 @@
        "      <td>1:02PM</td>\n",
        "      <td>38</td>\n",
        "      <td>...</td>\n",
-       "      <td>71099.0</td>\n",
        "      <td>0.764045</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -439,8 +470,8 @@
        "      <td>1:02PM</td>\n",
        "      <td>12</td>\n",
        "      <td>...</td>\n",
-       "      <td>62831.0</td>\n",
        "      <td>0.685531</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -463,8 +494,8 @@
        "      <td>1:03PM</td>\n",
        "      <td>24</td>\n",
        "      <td>...</td>\n",
-       "      <td>70118.0</td>\n",
        "      <td>0.769184</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -511,8 +542,8 @@
        "      <td>4:25PM</td>\n",
        "      <td>34</td>\n",
        "      <td>...</td>\n",
-       "      <td>75029.0</td>\n",
        "      <td>0.713739</td>\n",
+       "      <td>73945.7500</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -535,8 +566,8 @@
        "      <td>4:25PM</td>\n",
        "      <td>47</td>\n",
        "      <td>...</td>\n",
-       "      <td>90646.0</td>\n",
        "      <td>0.862302</td>\n",
+       "      <td>81462.0625</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -559,8 +590,8 @@
        "      <td>4:25PM</td>\n",
        "      <td>28</td>\n",
        "      <td>...</td>\n",
-       "      <td>70695.0</td>\n",
        "      <td>0.759704</td>\n",
+       "      <td>65836.4375</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -583,8 +614,8 @@
        "      <td>4:25PM</td>\n",
        "      <td>31</td>\n",
        "      <td>...</td>\n",
-       "      <td>68665.0</td>\n",
        "      <td>0.759266</td>\n",
+       "      <td>68900.5625</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -607,8 +638,8 @@
        "      <td>8:20PM</td>\n",
        "      <td>26</td>\n",
        "      <td>...</td>\n",
-       "      <td>69162.0</td>\n",
        "      <td>0.750537</td>\n",
+       "      <td>69645.4375</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -620,7 +651,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2816 rows × 27 columns</p>\n",
+       "<p>2816 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -650,18 +681,18 @@
        "2814     Los Angeles Rams  NaN  Sun   December 29   4:25PM       31  ...   \n",
        "2815  San Francisco 49ers  NaN  Sun   December 29   8:20PM       26  ...   \n",
        "\n",
-       "      weekly_attendance  weekly_attendance_ratio  \\\n",
-       "0               61940.0                 0.707304   \n",
-       "1               65757.0                 0.715536   \n",
-       "2               71099.0                 0.764045   \n",
-       "3               62831.0                 0.685531   \n",
-       "4               70118.0                 0.769184   \n",
-       "...                 ...                      ...   \n",
-       "2811            75029.0                 0.713739   \n",
-       "2812            90646.0                 0.862302   \n",
-       "2813            70695.0                 0.759704   \n",
-       "2814            68665.0                 0.759266   \n",
-       "2815            69162.0                 0.750537   \n",
+       "      weekly_attendance_ratio  avg_season_attendance_prev  \\\n",
+       "0                    0.707304                         NaN   \n",
+       "1                    0.715536                         NaN   \n",
+       "2                    0.764045                         NaN   \n",
+       "3                    0.685531                         NaN   \n",
+       "4                    0.769184                         NaN   \n",
+       "...                       ...                         ...   \n",
+       "2811                 0.713739                  73945.7500   \n",
+       "2812                 0.862302                  81462.0625   \n",
+       "2813                 0.759704                  65836.4375   \n",
+       "2814                 0.759266                  68900.5625   \n",
+       "2815                 0.750537                  69645.4375   \n",
        "\n",
        "      home_team_superbowl_winner_last_season  \\\n",
        "0                                      False   \n",
@@ -715,10 +746,10 @@
        "2814                    2.0  \n",
        "2815                    2.0  \n",
        "\n",
-       "[2816 rows x 27 columns]"
+       "[2816 rows x 28 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 155,
    "id": "745389b1",
    "metadata": {},
    "outputs": [],
@@ -807,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 156,
    "id": "ffc4543f",
    "metadata": {},
    "outputs": [],
@@ -874,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 157,
    "id": "b4743ee1",
    "metadata": {},
    "outputs": [],
@@ -955,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 158,
    "id": "1cc50ec3",
    "metadata": {},
    "outputs": [
@@ -964,7 +995,8 @@
       "text/plain": [
        "Index(['year', 'week', 'home_team', 'away_team', 'winner', 'tie', 'day',\n",
        "       'date', 'time', 'home_team_city', 'away_team_city', 'weekly_attendance',\n",
-       "       'weekly_attendance_ratio', 'home_team_superbowl_winner_last_season',\n",
+       "       'weekly_attendance_ratio', 'avg_season_attendance_prev',\n",
+       "       'home_team_superbowl_winner_last_season',\n",
        "       'away_team_superbowl_winner_last_season',\n",
        "       'home_team_playoffs_last_season', 'away_team_playoffs_last_season',\n",
        "       'home_win', 'away_win', 'home_team_wins_last_3',\n",
@@ -980,7 +1012,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,13 +1023,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 159,
    "id": "d5e9e50a",
    "metadata": {},
    "outputs": [],
    "source": [
     "columns_to_select = ['year', 'week', 'home_team', 'away_team','day','date', 'time', \n",
-    "    'weekly_attendance', 'weekly_attendance_ratio', 'home_team_superbowl_winner_last_season',\n",
+    "    'weekly_attendance', 'weekly_attendance_ratio', 'avg_season_attendance_prev', 'home_team_superbowl_winner_last_season',\n",
     "    'away_team_superbowl_winner_last_season', 'home_team_playoffs_last_season', \n",
     "    'away_team_playoffs_last_season','home_team_wins_last_3', 'away_team_wins_last_3',\n",
     "    'pts_home', 'pts_away', 'yds_home', 'yds_away', 'turnovers_home', 'turnovers_away', # I keep it for cheching this is not modified\n",
@@ -1008,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "ab85914e",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "1c318a97",
    "metadata": {},
    "outputs": [],
